fix serverdata